# MTGProxyPrinter

./: .gitignore  LICENSE-ICONS  MANIFEST.in  README.md  README.rst  ThirdPartyLicenses.md  benchmark_card_data_import.py  build_MTGProxyPrinter_packages.bat  build_MTGProxyPrinter_packages.sh  create_app_bundle_for_Linux.sh  create_app_bundle_for_Windows.bat  create_application_bundle_using_PyInstaller.bat  create_application_bundle_using_PyInstaller.sh  create_development_environment.bat  create_development_environment.sh  create_wheel.sh  crowdin.yml  mtg-proxy-printer-runner.py  pyproject.toml  pysidedeploy.spec  requirements.txt  run_tests.bat  run_tests.sh  setup.cfg  setup.py  setup_cx_freeze.py  tox.ini
.fossil-settings/: binary-glob  crlf-glob  ignore-glob
doc/: MTGProxyPrinter.nmodel  ThirdPartyLicenses.md  WIP migration script v34 to v35.sql  changelog.md  index.md
graphics_source/: MTGPP.psd  MTGPP_clean.xcf
mtg_proxy_printer/: __init__.py  __main__.py  app_dirs.py  application.py  argument_parser.py  card_info_downloader.py  card_info_importer.py  carddb_migrations.py  decklist_downloader.py  downloader_base.py  http_file.py  logger.py  meta_data.py  metered_file.py  missing_images_manager.py  natsort.py  print.py  print_count_updater.py  printing_filter_updater.py  progress_meter.py  runner.py  save_file_migrations.py  settings.py  sqlite_helpers.py  stop_thread.py  units_and_sizes.py  update_checker.py
mtg_proxy_printer/async_tasks/: base.py  card_info_downloader.py  decklist_downloader.py  document_loader.py  downloader_base.py  image_downloader.py  print_count_updater.py  printing_filter_updater.py  update_checker.py
mtg_proxy_printer/decklist_formatter/: formatter.py
mtg_proxy_printer/decklist_parser/: common.py  csv_parsers.py  mtgarena.py  re_parsers.py  scryfall.py
mtg_proxy_printer/document_controller/: __init__.py  _interface.py  card_actions.py  compact_document.py  edit_custom_card.py  edit_document_settings.py  import_deck_list.py  load_document.py  move_cards.py  move_page.py  new_document.py  page_actions.py  replace_card.py  save_document.py  shuffle_document.py
mtg_proxy_printer/model/: __init__.py  card.py  card_list.py  carddb.py  carddb.sql  carddb_helpers.py  carddb_migrations.py  document-v2.sql  document-v3.sql  document-v4.sql  document-v5.sql  document-v6.sql  document-v7.sql  document.py  document.sql  document_loader.py  document_page.py  imagedb.py  imagedb_files.py  language.py  page_layout.py  printing_filter_model.py  string_list.py
mtg_proxy_printer/page_scene/: items.py  page_scene.py
mtg_proxy_printer/resources/: resources.qrc
mtg_proxy_printer/ui/: add_card.py  cache_cleanup_wizard.py  card_list_table_view.py  central_widget.py  color_palettte.py  common.py  compiled_resources.pyi  current_page_view.py  custom_card_import_dialog.py  deck_import_wizard.py  dialogs.py  document_view.py  first_start_wizard.py  item_delegates.py  main_window.py  page_card_table_view.py  page_config_container.py  page_config_preview_area.py  page_config_widget.py  page_list_view.py  page_renderer.py  page_scene.py  printing_filter_widgets.py  progress_bar.py  settings_window.py  settings_window_pages.py
pyinstaller_hooks/: __init__.py  hook-ijson.py  hook-mtg_proxy_printer.py
pyinstaller_hooks/pre_find_module_path/: hook-mtg_proxy_printer.py
resources/: resources.qrc
resources/translations/: mtgproxyprinter_de-DE.ts  mtgproxyprinter_en-US.ts  mtgproxyprinter_es-ES.ts  mtgproxyprinter_fr-FR.ts  progress.json
resources/ui/: document_settings_dialog.ui  export_card_images_dialog.ui  page_config_container.ui  page_config_widget.ui
scripts/: benchmark_card_data_import.py  clean_windows_build.bat  compile_resources.py  compile_ui_files.py  generate_windows_icon.py  rebuild_requirements.py  update_translations.py
tests/: __init__.py  conftest.py  hasgetter.py  helpers.py  test___main__.py  test_argument_parser.py  test_card_info_downloader.py  test_card_info_parser.py  test_card_list.py  test_carddb.py  test_carddb_helpers.py  test_check_card_rendering.py  test_connection_type_or.py  test_custom_hamcrest_matchers.py  test_database_migration_code.py  test_decklist_downloader.py  test_document.py  test_document_loader.py  test_http_file.py  test_image_db.py  test_image_downloader.py  test_known_card_image_model.py  test_metadata.py  test_natsort.py  test_page_layout_settings.py  test_pdf_export.py  test_print.py  test_printing_filter_updater.py  test_progress_meter.py  test_resources.py  test_save_file_migrations.py  test_save_file_schema.py  test_settings.py  test_stop_thread.py  test_units_and_sizes.py  test_update_checker.py
tests/async_tasks/: test_printing_filter_updater.py  test_printing_preference_updater.py
tests/decklist_parser/: test_generic_re_parser.py  test_mtg_arena_parser.py  test_mwdeck_re_parser.py  test_scryfall_csv_parser.py  test_tappedout_csv_parser.py
tests/document_controller/: helpers.py  test_action_add_card.py  test_action_compact_document.py  test_action_edit_document_settings.py  test_action_import_deck_list.py  test_action_load_document.py  test_action_move_cards.py  test_action_move_page.py  test_action_new_document.py  test_action_new_page.py  test_action_remove_cards.py  test_action_remove_page.py  test_action_save_document.py  test_action_shuffle_document.py  test_base_class.py  test_move_cards.py  test_replace_card.py
tests/json_samples/: Asmoranomardicadaistinaculdacar.json  Asmoranomardicadaistinaculdacar_2.json  Asmoranomardicadaistinaculdacar_German.json  Bake_into_a_Pie.json  Bar_the_Gate.json  Dungeon_Skeleton_Token.json  Dungeon_of_the_Mad_Mage.json  Elrond_Lord_of_Rivendell.json  English_basic_Forest_newest_and_low_res.json  Explore_the_Underdark.json  Flowerfoot_Swordmaster_card.json  Flowerfoot_Swordmaster_token.json  Food_Token.json  Food_Token_2.json  Samwise_the_Stouthearted.json  Spirit_1_1_TC16.json  Spirit_1_1_TNEO.json  Spirit_4_5_TNEO.json  The_Ring.json  The_Underworld_Cookbook.json  Trailblazers_Torch.json  Undercity.json  Zombie_Ogre.json  ___README.txt  __init__.py  (+65 more)
(+128 files in other folders)
