[build-system]
requires = [
    "setuptools>=51",
    "wheel",
    "PyQt5",
    "build",
    "tox >= 3.8",
]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.18

envlist = 
    py3-{unit_tests, test_create_bundle}

[testenv]
skip_install = True


platform =
    linux: linux
#    macos: darwin
    windows: win32


deps =
    appdirs >= 1.4.3
    build
    PyQt5
    ijson >= 3.1.0
    pint
    delegateto == 1.5


[testenv:py3-unit_tests]

# Let Qt5 render offscreen, so that running tests don’t open windows or try to access the local system’s display
# This also prevents unwanted user interactions with the widgets under test
setenv =
    QT_QPA_PLATFORM = offscreen
    PYTHONDEVMODE = 1

deps =
    {[testenv]deps}
    pytest
    pytest-cov
    pytest-timeout
    pytest-qt
    PyHamcrest >= 1.8.1

commands =
    pytest tests

[testenv:py3-visible_unit_tests]
# Runs the unit tests with the default Qt platform plugin,
# causing them to visibly spawn GUI windows for tests of view logic.
# Can be used to inspect the actions and GUI states manually.
# Not part of the environment list, so isn’t run automatically.

deps =
    {[testenv:py3-unit_tests]deps}

commands =
   {[testenv:py3-unit_tests]commands}

# Pass DISPLAY, to allow rendering on screen. Also pass all other Qt-related environment variables,
# like QT_SCREEN_SCALE_FACTORS
passenv =
    DISPLAY
    QT_*
    
setenv = 
   PYTHONDEVMODE = 1

[testenv:py3-test_create_bundle]

deps =
    {[testenv]deps}
    cx_Freeze >= 6.6


commands =
    python setup_cx_freeze.py build_exe --build-exe build{/}bundle_test
    windows: {toxinidir}{/}scripts{/}clean_windows_build.bat build{/}bundle_test
    {toxinidir}{/}build{/}bundle_test{/}MTGProxyPrinter --version



[testenv:py3-package-{windows,linux}]

deps =
    {[testenv]deps}
    cx_Freeze >= 6.6


commands =
    python -m build
    python setup_cx_freeze.py build_exe
    windows: {toxinidir}{/}scripts{/}clean_windows_build.bat
    windows: python setup_cx_freeze.py bdist_msi --skip-build



"""
