[metadata]
name = MTGProxyPrinter
author = Thomas Hess
author_email = thomas.hess@udo.edu
description = MTGProxyPrinter allows efficient printing of Magic: The Gathering cards for playtesting purposes.
long_description = file: README.md
license = GPLv3+
license_file = LICENSE.md
version = attr: mtg_proxy_printer.meta_data.__version__
url = http://1337net.duckdns.org:8080/MTGProxyPrinter/index
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: X11 Applications :: Qt
    Environment :: Win32 (MS Windows)
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Games/Entertainment :: Board Games
    Topic :: Internet :: WWW/HTTP :: Indexing/Search


[options]
python_requires = >= 3.8, < 4
include_package_data = True
packages = find:
install_requires =
    appdirs >= 1.4.3
    PyQt5
    ijson >= 3.1.0
    pint
    delegateto >= 1.5


[options.extras_require]
dev =
    cx_Freeze >= 6.6
    pytest-runner
    pytest
    pytest-cov
    pytest-timeout
    pytest-qt
    PyHamcrest >= 1.8.1
    PyQt5-stubs
    sip
    build
    tox >= 3.8


[options.packages.find]
include =
    mtg_proxy_printer*

[options.entry_points]
gui_scripts =
    mtg-proxy-printer = mtg_proxy_printer.__main__:main


[bdist_wheel]
universal = 0
[aliases]
test=pytest
